# Real-time-news-search

./: .gitignore  LICENSE  README.md  pyproject.toml  ui.py
src/: consumer.py  producer-test.py  producer.py  settings.py  tools.py  vector.py
